exports[`lint api > diag snapshot 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unsafe-member-access",
      "message": "Unsafe member access .b on an \`any\` value.",
      "filePath": "src/index.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 3
        },
        "end": {
          "line": 2,
          "column": 4
        }
      }
    },
    {
      "ruleName": "no-unsafe-member-access",
      "message": "Unsafe member access .c on an \`any\` value.",
      "filePath": "src/index.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 4
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 41
}
`;

exports[`lint api > virtual file support 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unsafe-member-access",
      "message": "Unsafe member access .b on an \`any\` value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 23
        },
        "end": {
          "line": 3,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 41
}
`;
